--- a/Assets/Tools/DOTween/DOTweenExtensionsAssembly.asmdef
+++ b/Assets/Tools/DOTween/DOTweenExtensionsAssembly.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:4307f53044263cf4b835bd812fc161a4"
+        "GUID:4307f53044263cf4b835bd812fc161a4",
+        "GUID:b85a9b696dea92b4f9d0efe8b3f0e5b7"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -17,6 +18,11 @@
             "name": "com.unity.cinemachine",
             "expression": "2.6.11",
             "define": "TOOLS_CINEMACHINE"
+        },
+        {
+            "name": "com.demigiant.dotween",
+            "expression": "",
+            "define": "TOOLS_DOTWEEN"
         }
     ],
     "noEngineReferences": false
