--- a/Assets/Tools/Plugins/Texture3DGenerator/Texture3DGeneratorAssembly.asmdef
+++ b/Assets/Tools/Plugins/Texture3DGenerator/Texture3DGeneratorAssembly.asmdef
@@ -13,6 +13,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.burst",
+            "expression": "1.6.5",
+            "define": "TOOLS_BURST"
+        }
+    ],
     "noEngineReferences": false
 }
