--- a/Assets/Tools/Plugins/Facepunch.Steamworks/com.facepunch.steamworks.asmdef
+++ b/Assets/Tools/Plugins/Facepunch.Steamworks/com.facepunch.steamworks.asmdef
@@ -6,6 +6,7 @@
         "Editor",
         "LinuxStandalone64",
         "Lumin",
+        "macOSStandalone",
         "WindowsStandalone32",
         "WindowsStandalone64"
     ],
