--- a/Assets/Tools/Plugins/Rebind/RebindAssembly.asmdef
+++ b/Assets/Tools/Plugins/Rebind/RebindAssembly.asmdef
@@ -5,7 +5,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
-        "GUID:c4d2213fd830e4c45bd6174503fd09ca"
+        "GUID:c4d2213fd830e4c45bd6174503fd09ca",
+        "GUID:eec0964c48f6f4e40bc3ec2257ccf8c5"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -14,6 +15,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.localization",
+            "expression": "1.0.5",
+            "define": "TOOLS_LOCALIZATION"
+        }
+    ],
     "noEngineReferences": false
 }
