--- a/Assets/Tools/Editor/ToolsEditorAssembly.asmdef
+++ b/Assets/Tools/Editor/ToolsEditorAssembly.asmdef
@@ -5,7 +5,9 @@
         "GUID:c4d2213fd830e4c45bd6174503fd09ca",
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:df380645f10b7bc4b97d4f5eb6303d95"
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
+        "GUID:eec0964c48f6f4e40bc3ec2257ccf8c5",
+        "GUID:2e77701fe0ceda44fb763f03ee704c37"
     ],
     "includePlatforms": [
         "Editor"
@@ -16,6 +18,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.localization",
+            "expression": "1.0.5",
+            "define": "TOOLS_LOCAL"
+        }
+    ],
     "noEngineReferences": false
 }
