--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
     "com.dbrizov.naughtyattributes": "2.1.4",
+    "com.needle.compilation-visualizer": "1.8.3",
     "com.unity.cinemachine": "2.8.4",
     "com.unity.collab-proxy": "1.15.16",
     "com.unity.ide.rider": "3.0.14",
     "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.3.0",
     "com.unity.render-pipelines.core": "12.1.6",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
@@ -42,10 +44,9 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.needle.compilation-visualizer": "1.8.3"
+    "com.unity.modules.xr": "1.0.0"
   },
-    "testables": [
+  "testables": [
     "com.needle.compilation-visualizer"
   ],
   "scopedRegistries": [
