--- a/Assets/Tools/ToolsAssembly.asmdef
+++ b/Assets/Tools/ToolsAssembly.asmdef
@@ -1,11 +1,13 @@
 {
     "name": "ToolsAssembly",
-    "rootNamespace": "JD",
+    "rootNamespace": "",
     "references": [
         "GUID:f06555f75b070af458a003d92f9efb00",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:df380645f10b7bc4b97d4f5eb6303d95"
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
+        "GUID:eec0964c48f6f4e40bc3ec2257ccf8c5",
+        "GUID:b85a9b696dea92b4f9d0efe8b3f0e5b7"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -14,6 +16,17 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.demigiant.dotween",
+            "expression": "1.2.632",
+            "define": "TOOLS_DOTWEEN"
+        },
+        {
+            "name": "com.unity.localization",
+            "expression": "1.0.5",
+            "define": "TOOLS_LOCALIZATION"
+        }
+    ],
     "noEngineReferences": false
 }
