--- a/Assets/Tools/Editor/ToolsEditorAssembly.asmdef
+++ b/Assets/Tools/Editor/ToolsEditorAssembly.asmdef
@@ -2,10 +2,12 @@
     "name": "ToolsEditorAssembly",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:7cf5465677e6c2f40ab0d676cde53bc3",
         "GUID:df380645f10b7bc4b97d4f5eb6303d95",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:15fc0a57446b3144c949da3e2b9737a9",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:4307f53044263cf4b835bd812fc161a4"
     ],
     "includePlatforms": [
         "Editor"
@@ -16,6 +18,32 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.demigiant.dotween",
+            "expression": "1.2.632",
+            "define": "TOOLS_DOTWEEN"
+        },
+        {
+            "name": "com.unity.localization",
+            "expression": "1.0.5",
+            "define": "TOOLS_LOCALIZATION"
+        },
+        {
+            "name": "com.unity.cinemachine",
+            "expression": "2.9.1",
+            "define": "TOOLS_CINEMACHINE"
+        },
+        {
+            "name": "com.dbrizov.naughtyattributes",
+            "expression": "2.1.4",
+            "define": "TOOLS_NAUATTR"
+        },
+        {
+            "name": "com.unity.render-pipelines.universal",
+            "expression": "12.1.6",
+            "define": "TOOLS_URP"
+        }
+    ],
     "noEngineReferences": false
 }
