--- a/Assets/Tools/ToolsAssembly.asmdef
+++ b/Assets/Tools/ToolsAssembly.asmdef
@@ -2,10 +2,11 @@
     "name": "ToolsAssembly",
     "rootNamespace": "",
     "references": [
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
+        "GUID:15fc0a57446b3144c949da3e2b9737a9",
         "GUID:f06555f75b070af458a003d92f9efb00",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
         "GUID:eec0964c48f6f4e40bc3ec2257ccf8c5",
         "GUID:b85a9b696dea92b4f9d0efe8b3f0e5b7",
         "GUID:4307f53044263cf4b835bd812fc161a4",
@@ -38,6 +39,11 @@
             "name": "com.dbrizov.naughtyattributes",
             "expression": "2.1.4",
             "define": "TOOLS_NAUATTR"
+        },
+        {
+            "name": "com.unity.render-pipelines.universal",
+            "expression": "12.1.6",
+            "define": "TOOLS_URP"
         }
     ],
     "noEngineReferences": false
