--- a/Assets/Tools/ToolsAssembly.asmdef
+++ b/Assets/Tools/ToolsAssembly.asmdef
@@ -44,6 +44,11 @@
             "name": "com.unity.render-pipelines.universal",
             "expression": "12.1.6",
             "define": "TOOLS_URP"
+        },
+        {
+            "name": "com.unity.timeline",
+            "expression": "1.6.4",
+            "define": "TOOLS_TIMELINE"
         }
     ],
     "noEngineReferences": false
