--- a/Assets/Tools/Editor/ToolsEditorAssembly.asmdef
+++ b/Assets/Tools/Editor/ToolsEditorAssembly.asmdef
@@ -7,7 +7,8 @@
         "GUID:15fc0a57446b3144c949da3e2b9737a9",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:4307f53044263cf4b835bd812fc161a4"
+        "GUID:4307f53044263cf4b835bd812fc161a4",
+        "GUID:2665a8d13d1b3f18800f46e256720795"
     ],
     "includePlatforms": [
         "Editor"
@@ -43,6 +44,11 @@
             "name": "com.unity.render-pipelines.universal",
             "expression": "12.1.6",
             "define": "TOOLS_URP"
+        },
+        {
+            "name": "com.unity.burst",
+            "expression": "1.6.6",
+            "define": "TOOLS_BURST"
         }
     ],
     "noEngineReferences": false
