--- a/Assets/Tools/ToolsAssembly.asmdef
+++ b/Assets/Tools/ToolsAssembly.asmdef
@@ -10,7 +10,8 @@
         "GUID:eec0964c48f6f4e40bc3ec2257ccf8c5",
         "GUID:b85a9b696dea92b4f9d0efe8b3f0e5b7",
         "GUID:4307f53044263cf4b835bd812fc161a4",
-        "GUID:776d03a35f1b52c4a9aed9f56d7b4229"
+        "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
+        "GUID:2665a8d13d1b3f18800f46e256720795"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -49,6 +50,11 @@
             "name": "com.unity.timeline",
             "expression": "1.6.4",
             "define": "TOOLS_TIMELINE"
+        },
+        {
+            "name": "com.unity.burst",
+            "expression": "1.6.6",
+            "define": "TOOLS_BURST"
         }
     ],
     "noEngineReferences": false
