--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.localization": "1.0.5",
     "com.unity.render-pipelines.universal": "12.1.6",
     "com.unity.shadergraph": "12.1.6",
+    "com.unity.splines": "2.1.0",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.2",
