--- a/Assets/Tools/ToolsAssembly.asmdef
+++ b/Assets/Tools/ToolsAssembly.asmdef
@@ -12,7 +12,9 @@
         "GUID:4307f53044263cf4b835bd812fc161a4",
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
         "GUID:2665a8d13d1b3f18800f46e256720795",
-        "GUID:7c22fd5d7a7b0184f92b4c300eafe11c"
+        "GUID:7c22fd5d7a7b0184f92b4c300eafe11c",
+        "GUID:21d1eb854b91ade49bc69a263d12bee2",
+        "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -51,6 +53,11 @@
             "name": "com.unity.burst",
             "expression": "1.6.5",
             "define": "TOOLS_BURST"
+        },
+        {
+            "name": "com.unity.splines",
+            "expression": "2.0.0",
+            "define": "TOOLS_SPLINES"
         }
     ],
     "noEngineReferences": false
