use freya package

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -42,7 +42,8 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.acegikmo.mathfs": "0.1.0"
   },
   "testables": [
     "com.needle.compilation-visualizer"
@@ -52,6 +53,7 @@
       "name": "package.openupm.com",
       "url": "https://package.openupm.com",
       "scopes": [
+        "com.acegikmo.mathfs",
         "com.brunomikoski.animationsequencer",
         "com.dbrizov.naughtyattributes",
         "com.demigiant.dotween",
