--- a/Assets/Tools/ToolsAssembly.asmdef
+++ b/Assets/Tools/ToolsAssembly.asmdef
@@ -14,7 +14,8 @@
         "GUID:2665a8d13d1b3f18800f46e256720795",
         "GUID:7c22fd5d7a7b0184f92b4c300eafe11c",
         "GUID:21d1eb854b91ade49bc69a263d12bee2",
-        "GUID:d8b63aba1907145bea998dd612889d6b"
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:6071c9f2ce0a4407c93af459fa416e54"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
