--- a/Assets/Tools/Editor/ToolsEditorAssembly.asmdef
+++ b/Assets/Tools/Editor/ToolsEditorAssembly.asmdef
@@ -10,7 +10,8 @@
         "GUID:4307f53044263cf4b835bd812fc161a4",
         "GUID:2665a8d13d1b3f18800f46e256720795",
         "GUID:eec0964c48f6f4e40bc3ec2257ccf8c5",
-        "GUID:2e77701fe0ceda44fb763f03ee704c37"
+        "GUID:2e77701fe0ceda44fb763f03ee704c37",
+        "GUID:0a0471484b079be408cb3a0d7fe94736"
     ],
     "includePlatforms": [
         "Editor"
@@ -46,6 +47,11 @@
             "name": "com.unity.burst",
             "expression": "1.6.5",
             "define": "TOOLS_BURST"
+        },
+        {
+            "name": "com.marijnzwemmer.unity-toolbar-extender",
+            "expression": "1.4.2",
+            "define": "TOOLS_TOOLBAR"
         }
     ],
     "noEngineReferences": false
