add redcode pool

--- a/Assets/Tools/ToolsAssembly.asmdef
+++ b/Assets/Tools/ToolsAssembly.asmdef
@@ -15,7 +15,8 @@
         "GUID:7c22fd5d7a7b0184f92b4c300eafe11c",
         "GUID:21d1eb854b91ade49bc69a263d12bee2",
         "GUID:d8b63aba1907145bea998dd612889d6b",
-        "GUID:6071c9f2ce0a4407c93af459fa416e54"
+        "GUID:6071c9f2ce0a4407c93af459fa416e54",
+        "GUID:8f6e6ae3770c5ec48aec3ed639dd661e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
