screen draw urp only

--- a/Assets/Tools/ScreenDraw/ScreenDrawAssembly.asmdef
+++ b/Assets/Tools/ScreenDraw/ScreenDrawAssembly.asmdef
@@ -12,6 +12,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.render-pipelines.universal",
+            "expression": "12.1.6",
+            "define": "UNITY_URP"
+        }
+    ],
     "noEngineReferences": false
 }
