custom feature editor

--- a/Assets/Tools/Outline/Editor/OutlineEditorAssembly.asmdef
+++ b/Assets/Tools/Outline/Editor/OutlineEditorAssembly.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "OutlineEditorAssembly",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:04c537308063fb349abff7504a0d9bc6"
+    ],
     "includePlatforms": [
         "Editor"
     ],
