--- a/Assets/Tools/Outline/Runtime/OutlineAssembly.asmdef
+++ b/Assets/Tools/Outline/Runtime/OutlineAssembly.asmdef
@@ -13,6 +13,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.render-pipelines.universal",
+            "expression": "",
+            "define": "OUTLINE_URP"
+        }
+    ],
     "noEngineReferences": false
 }
