--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.acegikmo.mathfs": "https://github.com/FreyaHolmer/Mathfs.git",
     "com.annulusgames.tween-playables": "https://github.com/AnnulusGames/TweenPlayables.git?path=/Assets/TweenPlayables",
     "com.brunomikoski.animationsequencer": "0.5.2",
+    "com.cyanilux.shadergraph-variables": "https://github.com/Cyanilux/ShaderGraphVariables.git",
     "com.dbrizov.naughtyattributes": "2.1.4",
     "com.marijnzwemmer.unity-toolbar-extender": "https://github.com/marijnz/unity-toolbar-extender.git",
     "com.needle.compilation-visualizer": "1.8.3",
