--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -53,7 +53,8 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.coffee.git-dependency-resolver": "2.0.0"
   },
   "testables": [
     "com.needle.compilation-visualizer"
@@ -65,6 +66,7 @@
       "scopes": [
         "com.acegikmo.mathfs",
         "com.brunomikoski.animationsequencer",
+        "com.coffee.git-dependency-resolver",
         "com.dbrizov.naughtyattributes",
         "com.demigiant.dotween",
         "com.facepunch.steamworks",
