--- a/Assets/Tools/package.json
+++ b/Assets/Tools/package.json
@@ -7,5 +7,9 @@
 	"unityRelease": "0f1",
 	"author": {
 		"name": "Jason Davies"
+	},
+	"dependencies": {
+		"com.unity.cinemachine": "2.9.7",
+		"com.unity.burst": "1.6.6"
 	}
 }
