--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,25 +2,26 @@
   "dependencies": {
     "com.acegikmo.mathfs": "https://github.com/FreyaHolmer/Mathfs.git",
     "com.annulusgames.tween-playables": "https://github.com/AnnulusGames/TweenPlayables.git?path=/Assets/TweenPlayables",
-    "com.brunomikoski.animationsequencer": "0.5.2",
+    "com.brunomikoski.animationsequencer": "0.5.4",
     "com.cyanilux.shadergraph-variables": "https://github.com/Cyanilux/ShaderGraphVariables.git",
     "com.dbrizov.naughtyattributes": "2.1.4",
     "com.marijnzwemmer.unity-toolbar-extender": "https://github.com/marijnz/unity-toolbar-extender.git",
-    "com.needle.compilation-visualizer": "1.8.3",
+    "com.needle.compilation-visualizer": "1.8.4",
     "com.redbluegames.mulligan": "https://github.com/redbluegames/unity-mulligan-renamer.git?path=/Assets/RedBlueGames/MulliganRenamer",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.burst": "1.6.6",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collections": "1.4.0",
-    "com.unity.ide.rider": "3.0.24",
-    "com.unity.ide.visualstudio": "2.0.20",
+    "com.unity.ide.rider": "3.0.26",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.3.0",
-    "com.unity.probuilder": "5.0.6",
+    "com.unity.localization": "1.0.5",
+    "com.unity.probuilder": "5.2.0",
     "com.unity.render-pipelines.universal": "12.1.6",
     "com.unity.splines": "2.1.0",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.2",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
