--- a/Assets/Tools/ToolsAssembly.asmdef
+++ b/Assets/Tools/ToolsAssembly.asmdef
@@ -16,7 +16,8 @@
         "GUID:21d1eb854b91ade49bc69a263d12bee2",
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:6071c9f2ce0a4407c93af459fa416e54",
-        "GUID:8f6e6ae3770c5ec48aec3ed639dd661e"
+        "GUID:8f6e6ae3770c5ec48aec3ed639dd661e",
+        "GUID:dfa12141dcd667f4eb98eb1aa9b7da98"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
